--- a/react-app/package.json
+++ b/react-app/package.json
@@ -8,7 +8,17 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-apollo": "^3.1.3",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-client-preset": "^1.0.8",
+    "apollo-link-http": "^1.5.16",
+    "apollo-link-ws": "^1.0.19",
+    "apollo-utilities": "^1.3.3",
+    "subscriptions-transport-ws": "^0.9.16",
+    "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1"
   },
   "scripts": {
     "start": "react-scripts start",
